# KindlingCalculator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  ProjectStart.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report-🐞.md  feature-request-🚀.md
docs/: Untitled Diagram.drawio
src/: manage.py
src/AppPackage/: asgi.py  settings.py  urls.py  wsgi.py
src/FirstApp/: apps.py
