[tool.poetry]
name = "gittemplate"
version = "0.1.0"
description = "Template to be used to start projects from GitHub"
authors = ["Crowxar"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
