[tool.poetry]
name = "gittemplate"
version = "0.1.0"
description = "Template to be used to start projects from GitHub"
authors = ["Crowxar"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
hypothesis = "^6.114.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
